Index file clean up

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
-	<body data-gr-c-s-loaded="true" style="">
+	<body>
 		<div class="loader"></div>
 		<script src="js/three.js"></script>
 		<script src="js/jquery.js"></script>
@@ -19,7 +19,6 @@
 		<script src="js/CSS3DRenderer.js"></script>
 		<script src="js/NoSleep.js"></script>
 		<div id="container"></div>
-		<div id="info"></div>
 		<div id="menu">
 			<button id="fullscreen">FULLSCREEN</button>
 			<button id="vrbutton">VR OFF</button>
